--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,6 +13,7 @@ spring.flyway.url=${spring.datasource.url}
 spring.flyway.user=bookapp_dev_flyway_user
 spring.flyway.password=bookapp_dev_flyway_pass
 spring.flyway.out-of-order=true
+spring.flyway.default-schema=bookapp_dev_schema
 spring.flyway.placeholders.audit_schema_name=bookapp_dev_aud_schema
 #spring.flyway.schemas=bookapp_dev_schema,bookapp_dev_aud_schema
 
