--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,7 +19,10 @@ spring.flyway.placeholders.audit_schema_name=bookapp_dev_aud_schema
 
 ## JPA
 spring.jpa.properties.hibernate.default_schema=bookapp_dev_schema
-spring.jpa.properties.org.hibernate.envers.default_schema=bookapp_dev_aud_schema
+spring.jpa.properties.org.hibernate.envers.audit_schema=bookapp_dev_aud_schema
+#spring.jpa.properties.org.hibernate.envers.default_schema=bookapp_dev_aud_schema
+#spring.jpa.properties.org.hibernate.envers.audit_table_suffix=_aud
+#spring.jpa.properties.org.hibernate.envers.store_data_at_delete=false
 
 ## Log
 logging.level.:INFO
