logging props for flyway

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,6 @@ spring.flyway.placeholders.audit_schema_name=bookapp_prod_aud_schema
 ## JPA
 spring.jpa.properties.hibernate.default_schema=bookapp_prod_schema
 spring.jpa.properties.org.hibernate.envers.audit_schema=bookapp_prod_aud_schema
+
+## Log
+logging.level.org.flywaydb=DEBUG
