--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,6 +26,7 @@ spring.jpa.properties.org.hibernate.envers.audit_schema=bookapp_dev_aud_schema
 
 ## Log
 logging.level.:INFO
+logging.level.org.flywaydb=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.fi.ishtech=DEBUG
