use ishtech-spring-boot-jwt for auth

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,5 +17,10 @@ spring.flyway.placeholders.audit_schema_name=bookapp_prod_aud_schema
 spring.jpa.properties.hibernate.default_schema=bookapp_prod_schema
 spring.jpa.properties.org.hibernate.envers.audit_schema=bookapp_prod_aud_schema
 
+## JWT
+fi.ishtech.springbootjwt.jwt.secret=TODO:from secrets
+fi.ishtech.springbootjwt.jwt.expirition-ms=180000
+fi.ishtech.springbootjwt.jwt.issuer=auth.springbootjwt.ishtech.fi
+
 ## Log
 logging.level.org.flywaydb=DEBUG
