--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
+## Actuator
+management.endpoints.web.exposure.include=info,health
+
 ## DB
 spring.datasource.name=ishtech_bookapp_prod_ds
 spring.datasource.url=jdbc:postgresql://dburl:5432/ishtech_prod_db
