--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -33,6 +33,6 @@ fi.ishtech.springbootjwt.jwt.issuer=dev.springbootjwt.ishtech.fi
 logging.level.:INFO
 logging.level.org.flywaydb=TRACE
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.fi.ishtech=DEBUG
 logging.level.fi.ishtech.practice.bookapp=TRACE
