--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,6 +29,9 @@ fi.ishtech.springbootjwt.jwt.secret=zpV7VtDrRMQkSBHBzusTBakCQtk4BnLkbB5nq8Mz5qUF
 fi.ishtech.springbootjwt.jwt.expirition-ms=1800000
 fi.ishtech.springbootjwt.jwt.issuer=dev.springbootjwt.ishtech.fi
 
+## Swagger
+fi.ishtech.springbootjwt.permit-swagger-urls=true
+
 ## Log
 logging.level.:INFO
 logging.level.org.flywaydb=TRACE
