--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -25,5 +25,8 @@ fi.ishtech.springbootjwt.jwt.secret=TODO:from secrets
 fi.ishtech.springbootjwt.jwt.expirition-ms=180000
 fi.ishtech.springbootjwt.jwt.issuer=auth.springbootjwt.ishtech.fi
 
+## CORS
+fi.ishtech.springbootjwt.cors.allowed-origins=https://booksui.ishtech.fi
+
 ## Log
 logging.level.org.flywaydb=DEBUG
