fix ishtech-springboo-jwtauth project references and usage

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,12 +21,12 @@ spring.jpa.properties.hibernate.default_schema=bookapp_prod_schema
 spring.jpa.properties.org.hibernate.envers.audit_schema=bookapp_prod_aud_schema
 
 ## JWT
-fi.ishtech.springbootjwt.jwt.secret=TODO:from secrets
-fi.ishtech.springbootjwt.jwt.expirition-ms=180000
-fi.ishtech.springbootjwt.jwt.issuer=auth.springbootjwt.ishtech.fi
+fi.ishtech.springboot.jwtauth.jwt.secret=TODO:from secrets
+fi.ishtech.springboot.jwtauth.jwt.expirition-ms=180000
+fi.ishtech.springboot.jwtauth.jwt.issuer=auth.jwtauth.springboot.ishtech.fi
 
 ## CORS
-fi.ishtech.springbootjwt.cors.allowed-origins=https://booksui.ishtech.fi
+fi.ishtech.springboot.jwtauth.cors.allowed-origins=https://booksui.ishtech.fi
 
 ## Log
 logging.level.org.flywaydb=DEBUG
