--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #
-spring.application.name=book-app
+spring.application.name=ishtech-springboot-book-app
 
 ## DB
 spring.datasource.driver-class-name=org.postgresql.Driver
