flyway locations at postgres to be inline with jwtauth

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,6 +12,7 @@ spring.flyway.enabled=true
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.user=bookapp_prod_flyway_user
 #spring.flyway.password=TODO:from secrets
+spring.flyway.locations=classpath:db/migration/postgres
 spring.flyway.out-of-order=true
 spring.flyway.default-schema=bookapp_prod_schema
 spring.flyway.placeholders.audit_schema_name=bookapp_prod_aud_schema
